--- a/examples/Analyze_Observation.ipynb
+++ b/examples/Analyze_Observation.ipynb
@@ -110,7 +110,7 @@
    "outputs": [],
    "source": [
     "# Choose the storage of data and analysis products\n",
-    "storage = scinter_measurement.storage(\"/mnt/c/Users/RapSp/Desktop/MPIfR/Fundi_tutorial/B1508+55\")\n",
+    "storage = scinter_measurement.storage(path_results)\n",
     "\n",
     "# choose an observation within that storage\n",
     "obsname = \"label_of_your_observation\"\n",
